<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.aw.avi.allutilsmethodsapp.ui.activity.recyclerviews.RecyclerViewMainActivity">

    <Button
        android:id="@+id/bt_rcv_simple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple_recyclerview" />


    <Button
        android:id="@+id/rcv_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grid_recycler" />

    <Button
        android:id="@+id/rcv_staggerd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/staggerd" />

    <Button
        android:id="@+id/rcv_with_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recycler_with_header" />

    <Button
        android:id="@+id/rcv_with_viewpager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recycler_with_header_viewpager" />

    <Button
        android:id="@+id/rcv_hetrogeneous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hetrogenous_recyclerview" />

</LinearLayout>
