<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.aw.avi.allutilsmethodsapp.ui.activity.LaunchModeMainActivity">


    <Button
        android:id="@+id/bt_standard_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/standard_mode"/>

    <Button
        android:id="@+id/bt_single_top_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_top"/>

    <Button
        android:id="@+id/bt_single_task_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_task"/>

    <Button
        android:id="@+id/bt_single_instance_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_instance"/>


</LinearLayout>
